# axo-pass

./: LICENSE.md  README.md  SECURITY.md  axo.release.toml  axo.toml  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css.ts  App.tsx  binding.ts  client.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.release.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: .gitignore
src-tauri/misc/: ap  ap-pinentry  ap-ssh-askpass  entitlements.plist  frittata-pinentry  frittata-ssh-askpass
src-tauri/src/: app.rs  cli.rs  keychain.rs  la_context.rs  lib.rs  main.rs  pinentry_handler.rs  ssh_askpass_handler.rs
src-tauri/src/age/: crypto.rs  errors.rs  mod.rs  recipients.rs
src-tauri/src/app/: app_mode.rs  app_state.rs  config.rs  mod.rs  parser.rs  passwords.rs  updates.rs  user_authorization.rs  vault.rs
src-tauri/src/app/handlers/: app_errors.rs  global_lock.rs  mod.rs  passwords.rs  settings.rs  shell_integration.rs  updates.rs  user_authorization.rs  vault.rs
src-tauri/src/app/handlers/gpg/: gpg_test.rs  mod.rs
src-tauri/src/app/handlers/ssh/: add_managed_ssh_key.rs  delete_managed_ssh_key.rs  get_ssh_agent_status.rs  get_ssh_key.rs  list_ssh_keys.rs  mod.rs  save_ssh_key_password.rs
src-tauri/src/app/handlers/ssh/schema/: mod.rs  ssh_key_entry.rs
src-tauri/src/app/handlers/vault/: add_credential.rs  add_item.rs  add_or_update_credential.rs  add_or_update_item.rs  add_vault.rs  delete_credential.rs  delete_item.rs  delete_vault.rs  get_decrypted_credential.rs  get_vault.rs  new_vault.rs  schemas.rs  unlock_vault.rs  update_item.rs  update_vault.rs
src-tauri/src/app/password_request/: handler.rs  state.rs  types.rs
src-tauri/src/app/protocols/: mod.rs  ssh_askpass.rs
src-tauri/src/app/protocols/pinentry/: handler.rs  mod.rs  server.rs
src-tauri/src/app/vault/: add_credential.rs  delete_credential.rs  delete_item.rs  get_decrypted_credential.rs  get_vault.rs  schemas.rs  update_item.rs
src-tauri/src/cli/: cmd_item.rs  mod.rs  shell_integration.rs
src-tauri/src/cli/commands/: exec.rs  inject.rs  item.rs  mod.rs  vault.rs
src-tauri/src/cli/commands/age/: mod.rs
src-tauri/src/cli/commands/keychain/: generic_password.rs  managed_keys.rs  mod.rs
src-tauri/src/cli/commands/ssh_agent/: client.rs  credential.rs  destination_constraint.rs  managed_credential.rs  mod.rs  server.rs  session.rs  session_binding.rs  ssh_agent.zsh  ssh_agent_command.rs  ssh_agent_session.rs  stored_credential.rs  userauth_request.rs
src-tauri/src/cli/commands/ssh_agent/fixtures/: b64_ed25519  b64_rsa
src-tauri/src/cli/commands/ssh_agent/managed_credential/: signer.rs
src-tauri/src/cli/commands/ssh_agent/stored_credential/: rsa_signing.rs
src-tauri/src/cli/commands/vault/: export.rs  import.rs  utils.rs
src-tauri/src/core/: auth.rs  build_sha.rs  config.rs  dirs.rs  find_bin_folder.rs  interpolate.rs  la_context.rs  mod.rs  provenance.rs  read_input.rs  updates.rs
src-tauri/src/core/auth/: la_context.rs
src-tauri/src/core/objc_helpers/: dict_proxy.rs  mod.rs
src-tauri/src/core/provenance/: helpers.rs  proc_info.rs  signing_info.rs
src-tauri/src/password_request/: handler.rs  mod.rs  state.rs
src-tauri/src/pinentry/: mod.rs
src-tauri/src/secrets/: errors.rs  keychain.rs  managed_key.rs  mod.rs  vault.rs  vault_wrapper.rs  vaults_manager.rs
src-tauri/src/secrets/keychain/: access_control.rs  errors.rs  generic_password.rs  keychain_query.rs  managed_key.rs  mod.rs
src-tauri/src/secrets/keychain/generic_password/: query.rs
src-tauri/src/secrets/keychain/managed_key/: managed_ssh_key.rs  query.rs  shared.rs  ssh.rs  utils.rs
src-tauri/src/secrets/vaults/: errors.rs  mod.rs  vault.rs  vault_wrapper.rs  vaults_manager.rs
src-tauri/src/secrets/vaults/vault/: encrypted_blob.rs  encrypted_vault.rs  vault_cipher.rs
src-tauri/src/secrets/vaults/vault_export/: export_mode.rs  exported_vault.rs  import_identity.rs  mod.rs  tests.rs
src-tauri/src/ssh/: known_hosts.rs  mod.rs  ssh_keys.rs  utils.rs
src/components/: Button.css.ts  Button.tsx  Card.css.ts  Card.tsx  Code.css.ts  Code.tsx  CodeBlock.css.ts  CodeBlock.tsx  Dialog.css.ts  Dialog.tsx  Divider.css.ts  Divider.tsx  ErrorDialog.css.ts  ErrorDialog.tsx  Flex.css.ts  Flex.tsx  InlineCheck.css.ts  InlineCheck.tsx  Input.css.ts  Loader.css.ts  Loader.tsx  SlideToggle.css.ts  SlideToggle.tsx  Toaster.css.ts  Toaster.tsx  Toggle.css.ts  Toggle.tsx  Toolbar.css.ts  Toolbar.tsx
src/components/form/: AdornedTextInput.css.ts  AdornedTextInput.tsx  Form.css.ts  Form.tsx  FormRow.css.ts  FormRow.tsx  Input.tsx
src/layout/: Layout.css.ts  Layout.tsx  LayoutDescription.tsx  LayoutTitle.tsx
src/mobx/: VaultStore.ts
src/mod/app/: AppRouter.tsx
src/mod/app/components/: IconMessage.css.ts  IconMessage.tsx  LockGuard.tsx  LockScreen.css.ts  LockScreen.tsx
src/mod/app/keys/: GPGSecrets.tsx  PassphraseSecrets.tsx
src/mod/app/mobx/: LockStore.ts  SshKeysStore.ts  VaultStore.ts
src/mod/app/secrets/: EditVaultSecret.tsx  SecretsRouter.tsx  VaultSecretView.tsx  VaultSettings.tsx  VaultView.tsx
src/mod/gpg-pinentry/: GpgPinentryScreen.tsx
src/mod/ssh-askpass/: SshAskpassScreen.tsx
src/pages/: Dashboard.css.ts  Dashboard.tsx  GpgPinentryScreen.tsx  Manager.tsx  PasswordRequest.css.ts  PasswordRequest.tsx  PinentryScreen.tsx  SshAskpassScreen.tsx
src/pages/Dashboard/: DashboardContent.css.ts  DashboardContent.tsx  DashboardNav..css.ts  DashboardNav.css.ts  DashboardNav.tsx  DashboardSection.tsx
src/pages/Manager/: AppUpdates.css.ts  AppUpdates.tsx  DeleteVaultDialog.tsx  GPGSecrets.tsx  Secrets.css.ts  Secrets.tsx  Settings.tsx  VaultSettings.tsx  VaultView.tsx
src/pages/PasswordRequest/: GpgPasswordRequest.tsx  PasswordRequest.css.ts  PasswordRequestForm.tsx  SshPasswordRequest.tsx  useAutoResizeWindow.ts
src/styles/: colors.css.ts  scrollbar.css.ts  secrets.css.ts  utils.ts
src/utils/: AppError.ts  CredentialKey.ts  loaderBorder.css.ts  nameToSlug.ts  useClient.ts  useInterval.ts
(+63 files in other folders)
