[package]
name = "axo-pass"
version = "0.1.4"
description = "macos touch id secrets manager"
authors = ["octavore"]
edition = "2024"
default-run = "axo-pass"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "frittata_lib"

[dependencies]
aes-gcm = "0.10.3"
age = { version = "0.11.1", features = ["armor"] }
age-core = "0.11.0"
anyhow = "1.0.100"
async-trait = "0.1"
base64 = "0.22.1"
block2 = "0.6.2"
clap = { version = "4.5.51", features = [
  "derive",
] }
clap_complete = "4.5.61"
color-print = "0.3.7"
dirs = "6.0.0"
fork = "0.6.0"
inquire = "0.9.1"
log = "0.4.28"
lru = "0.16.2"
md5 = "0.8.0"
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-local-authentication = "0.3.2"
objc2-security = "0.3.2"
p256 = "0.13"
percent-encoding = "2.3.2"
regex = "1.12.2"
rsa = "0.9.9"
secrecy = { version = "0.10.3", features = [
  "serde",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.15.1", features = [
  "base64",
] }
ssh-agent-lib = "0.5.1"
ssh-encoding = "0.2"
ssh-key = "0.6.7"
tauri = { version = "2", features = [] }
tauri-plugin-cli = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-utils = "2.8.0"
thiserror = "2.0.17"
time = { version = "0.3.44", features = [
  "serde",
  "serde-well-known",
] }
tokio = { version = "1.48.0", features = [
  "full",
] }
toml = "0.8"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
] }
typeshare = "1.0.4"
url = "2.5.7"
uuid = { version = "1.18.1", features = [
  "serde",
  "v4",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
