[package]
name = "axo-pass"
version = "0.2.0-rc.4"
edition = "2024"
description = "macos touch id secrets manager"
default-run = "axo-pass"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "frittata_lib"

[dependencies]
aes-gcm = "0.10.3"
age = {version = "0.11.3", features = ["armor"]}
age-core = "0.11.0"
anyhow = "1.0.102"
async-trait = "0.1"
base64 = "0.22.1"
block2 = "0.6.2"
clap = {version = "4.6.1", features = [
  "derive",
]}
clap_complete = "4.6.2"
color-print = "0.3.7"
dirs = "6.0.0"
dotenvy = "0.15.7"
fork = "0.6.0"
glob = "0.3"
indoc = "2.0.7"
inquire = "0.9.4"
itertools = "0.13.0"
libproc = "0.14.11"
log = "0.4.29"
lru = "0.16.4"
md5 = "0.8"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-local-authentication = "0.3.2"
objc2-security = "0.3.2"
p256 = "0.13"
percent-encoding = "2.3.2"
regex = "1.12.3"
rsa = "0.9.10"
secrecy = {version = "0.10.3", features = [
  "serde",
]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_with = {version = "3.18.0", features = [
  "base64",
]}
shlex = "1.3.0"
ssh-agent-lib = "0.5.2"
ssh-encoding = "0.2"
ssh-key = {version = "0.6.7", features = ["rsa"]}
tauri = {version = "2", features = []}
tauri-plugin-cli = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-utils = "2.8.3"
thiserror = "2.0.18"
time = {version = "0.3.47", features = [
  "serde",
  "serde-well-known",
]}
tokio = {version = "1.52.1", features = [
  "full",
]}
toml = "1.1.2"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3", features = [
  "env-filter",
]}
typeshare = "1.0.5"
url = "2.5.8"
uuid = {version = "1.23.1", features = ["serde", "v4", "v7"]}
zeroize = {version = "1.8.2", features = ["derive"]}

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = {version = "2", features = []}

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
